src/test/resources/valid/group/nested-group/NESGROUP.cpy
       01 EMP-RECORD.
           05 EMP-GROUP.
              15 EMP-NAME PIC 99.