src/test/resources/invalid/numeric/computational/COMP-3INV.cpy
           10 EMP-SALARY PIC 99 OMP-3.